# llvm-know-hows

./: README.md  index.html
00-foundations/: 01-llvm-mental-model.md  02-compilation-pipeline.md  03-llvm-ir-essentials.md  04-ssa-and-cfg.md  05-environment-setup.md
01-frontend/: 01-lexer.md  02-parser-ast.md  03-ast-to-ir.md
02-ir-and-passes/: 01-ir-builder.md  02-optimization-passes.md  03-pass-pipeline.md
03-aot/: 01-aot-theory.md  02-target-machine-codegen.md  03-building-an-aot-compiler.md  04-linking-and-runtime.md  05-bolt-and-post-link.md
04-jit/: 01-jit-theory.md  02-orc-architecture.md  03-building-a-jit.md  04-advanced-jit.md
05-mlir/: 01-mlir-theory.md  02-dialects-and-ops.md  03-lowering-and-conversion.md  04-building-a-dialect.md  05-mlir-to-llvm.md
06-backend/: 01-codegen-pipeline.md  02-instruction-selection.md  03-register-allocation.md
07-capstone/: 01-one-language-three-backends.md
examples/: README.md
examples/01-hello-ir/: CMakeLists.txt  README.md  build.sh  hello_ir.cpp
examples/02-aot-objgen/: CMakeLists.txt  README.md  aot.cpp  build.sh  driver.c
examples/03-lljit/: CMakeLists.txt  README.md  build.sh  jit.cpp
examples/04-custom-pass/: CMakeLists.txt  MulToAdd.cpp  README.md  build.sh  test.ll
